--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       src="https://kit.fontawesome.com/efd5604c01.js"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio Website</title>
+    <title>Portfolio Webpage</title>
   </head>
   <body>
     <header>
